--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 
 
 
-    <script src="/getIndex.js"></script>
+    <script src="/To-square(root)-or-not-to-square(root).js"></script>
 </body>
 </html>
